Removed Index from StaffingPeriodSearch Login error spacing fixed Alt row styles fixed for IE7

--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/ie7.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/ie7.css
@@ -45,3 +45,13 @@
     overflow: hidden;        
     height: 15px;
 }
+
+.error_msg .alert-danger 
+{
+    padding: 30px 0 10px 20px !important;    
+}
+
+.grid .altrow td
+{
+    background-color: #eff9fd;
+}
